# QtLego

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CPackConfig.cmake.in  LICENSE.md  QtLegoConfig.cmake.in  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  helloworld.cpp
src/: CMakeLists.txt  qlegoattacheddevice.cpp  qlegoattacheddevice.h  qlegocommon.h  qlegodevice.cpp  qlegodevice.h  qlegodevicescanner.cpp  qlegodevicescanner.h  qlegoglobal.h  qlegomotor.cpp  qlegomotor.h
tests/: CMakeLists.txt  tst_qlegodevicescanner.cpp  tst_qlegodevicescanner.h
